@@ -11,7 +11,6 @@ import org.bukkit.plugin.java.JavaPlugin;
 
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.Objects;
 import java.util.Set;
 
@@ -48,7 +47,7 @@ public class ContextManager implements Listener {
         if (registeredContexts == null) {
             return Collections.emptySet();
         }
-        return Collections.unmodifiableSet(new HashSet<>(registeredContexts.values()));
+        return Set.copyOf(registeredContexts.values());
     }
 
     /**
